# dd-generator

./: .gitignore  README.md  pyproject.toml  read_files.py  requirements.txt  setup.py
data/processed/: demos-goals.json  demos-model-files.json  sets.json
data/raw/model_jsons/: DemoS_001.json  DemoS_004.json  DemoS_004a.json  DemoS_005b.json  DemoS_006.json  DemoS_006b.json  DemoS_007a.json  DemoS_007b.json  DemoS_011.json  DemoS_011a.json  DemoS_011d.json  DemoS_011e.json
docs/demo-model-dd-files/DemoS_001/: demos_001.run  files_contents.json  vtrun.cmd
docs/demo-model-dd-files/DemoS_003/: demos_003.run
docs/demo-model-dd-files/DemoS_004/: base.dd  demos_004.run  demos_004_1103.vdt  syssettings.dd
docs/demo-model-dd-files/DemoS_004a/: base.dd  peak_rsv.dd  vtrun.cmd
docs/demo-model-dd-files/DemoS_004b/: DemoS_004b_input_data.json  base.dd  demos_004b.run  vtrun.cmd
docs/model_jsons/: DemoS_002.json  DemoS_003.json  DemoS_004b.json  DemoS_005.json  DemoS_005a.json  DemoS_006a.json  DemoS_007.json  DemoS_007c.json  DemoS_008.json  DemoS_008a.json  DemoS_008b.json  DemoS_008c.json  DemoS_011b.json  DemoS_011c.json  DemoS_012.json  DemoS_012a.json  DemoS_012b.json  DemoS_012c.json  DemoS_012d.json  DemoS_012e.json
docs/times-documentation/: indexes.json  input_parameters.json  parameters.json  sets.json
src/dd_converter/: __init__.py  __main__.py  converter.py  exceptions.py  parser.py
src/dd_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/utils/: extract_input_params.py
tests/: test_dd_to_csv.py
(+583 files in other folders)
