[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-converter"
version = "0.1.0"
description = "A tool to convert GAMS DD files to CSV format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "mahmoudmobir@gmail.com"},
]
dependencies = [
    "pandas>=2.0.0",
]

[project.scripts]
dd-converter = "dd_converter.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v" 